<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/myMaterialCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img"
            style="@style/myCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_travel"
                style="@style/myImage.Small"
                android:contentDescription="@string/travel_image"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            style="@style/myLinear.Vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_img"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                style="@style/myHeader.Small"
                android:text="@string/travel_title"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/myLinear.Horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/card_img"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/travel_rate"
                    android:src="@drawable/ic_baseline_star_yellow_24" />

                <TextView
                    android:id="@+id/tv_rate"
                    style="@style/myContent"
                    android:text="@string/travel_rate" />
            </LinearLayout>

            <LinearLayout
                style="@style/myLinear.Horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/card_img"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/travel_type"
                    android:src="@drawable/ic_baseline_beach__yellow_access_24" />

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/myContent"
                    android:text="@string/travel_type" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>