<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_travel"
            style="@style/myImage.Big"
            android:contentDescription="@string/travel_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <LinearLayout
            android:id="@+id/linear_layout1"
            style="@style/myLinear.Horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_dark"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_travel"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/travel_rate"
                android:src="@drawable/ic_baseline_star_yellow_24"/>


            <TextView
                android:id="@+id/tv_rate"
                style="@style/myContent"
                android:layout_marginStart="10dp"
                android:text="@string/travel_rate"
                android:textColor="@color/white"
                android:textSize="13sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout2"
            style="@style/myLinear.Horizontal"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_dark"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_travel"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_type"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/travel_type"
                android:src="@drawable/ic_baseline_beach__yellow_access_24" />


            <TextView
                android:id="@+id/tv_type"
                style="@style/myContent"
                android:layout_marginStart="10dp"
                android:text="@string/travel_type"
                android:textColor="@color/white"
                android:textSize="13sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/img_travel">

            <TextView
                android:id="@+id/tv_title"
                style="@style/myHeader.Big"
                android:text="@string/travel_title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_desc"
                style="@style/myContent"
                android:text="@string/travel_phone"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/opening_hours"
                    android:src="@drawable/ic_baseline_schedule_yellow_24" />

                <TextView
                    android:id="@+id/tv_open"
                    style="@style/myContent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/opening_hours"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/address"
                    android:src="@drawable/ic_baseline_place_yellow_24" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/myContent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/travel_phone"
                    android:src="@drawable/ic_baseline_phone_yellow_24" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/myContent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/travel_phone"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="2dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/img_travel1"
                            android:layout_width="200dp"
                            android:layout_height="150dp"
                            android:contentDescription="@string/travel_image"
                            android:scaleType="centerCrop"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:elevation="2dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/img_travel2"
                            android:layout_width="200dp"
                            android:layout_height="150dp"
                            android:contentDescription="@string/travel_image"
                            android:scaleType="centerCrop"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:elevation="2dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/img_travel3"
                            android:layout_width="200dp"
                            android:layout_height="150dp"
                            android:contentDescription="@string/travel_image"
                            android:scaleType="centerCrop"
                            tools:src="@tools:sample/backgrounds/scenic" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </HorizontalScrollView>

            <Button
                android:id="@+id/btn_maps"
                style="@style/myButton"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/destination"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>